--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,3 @@
 {
-  "presets": [
-    "latest",
-    "react"
-  ],
-  "plugins": [
-    "transform-object-rest-spread",
-    "transform-react-jsx"
-  ],
-  "compact": false
+  "presets": ["env", "react"]
 }
