--- a/package.json
+++ b/package.json
@@ -5,42 +5,48 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --watch",
-    "b-watch": "brunch watch --server",
-    "b-build-prod": "brunch build --production"
+    "dev": "webpack-dev-server --config webpack.config.js --colors --watch"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "chance": "^1.0.6",
     "immutability-helper": "^2.1.2",
-    "immutable": "^3.8.1",
+    "immutable": "github:facebook/immutable-js#master",
     "lodash": "^4.17.4",
-    "normalize.css": "^5.0.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
-    "react-router": "^3.0.2",
+    "normalize.css": "^7.0.0",
+    "prop-types": "^15.5.7",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-functional": "^2.0.0",
+    "react-redux": "^5.0.4",
+    "react-router-dom": "^4.1.0",
+    "react-router-redux": "next",
     "redux": "^3.6.0",
-    "semantic-ui-react": "^0.67.0"
+    "redux-logger": "^3.0.1",
+    "semantic-ui-react": "^0.73.1"
   },
   "devDependencies": {
-    "array.prototype.fill": "^1.0.2",
-    "auto-reload-brunch": "^2.7.1",
-    "autoprefixer": "^6.7.6",
-    "babel-brunch": "~6.1",
-    "babel-plugin-transform-object-rest-spread": "^6.23.0",
-    "babel-preset-latest": "^6.22.0",
-    "babel-preset-react": "^6.23.0",
-    "brunch": "^2",
-    "clean-css-brunch": "^2",
-    "csswring": "^5.1.1",
-    "hmr-brunch": "^0.1.1",
-    "jest": "^19.0.2",
-    "jest-cli": "^19.0.2",
-    "less-brunch": "^2.10.0",
-    "postcss-brunch": "^2.0.5",
-    "precss": "^1.4.0",
-    "react-functional": "^2.0.0",
-    "uglify-js-brunch": "^2"
+    "autoprefixer": "^7.1.4",
+    "babel-core": "^6.26.0",
+    "babel-jest": "^21.0.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "cssnano": "^3.10.0",
+    "jest": "^21.1.0",
+    "jest-cli": "^21.1.0",
+    "postcss-cssnext": "^3.0.2",
+    "postcss-import": "^11.0.0",
+    "postcss-loader": "^2.0.6",
+    "precss": "^2.0.0",
+    "redux-devtools-extension": "^2.13.2",
+    "regenerator-runtime": "^0.11.0",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.6.0",
+    "webpack-dev-server": "^2.8.2"
   }
 }
